--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
   <div class="shop">
-    <div class="page_title" id="catTitle"></div>
+    <h1 class="page_title" id="catTitle"></h1>
     <div class="products" id="catProducts">
-      <div class="product_item">
+      <div class="product">
         <div class="product_image">
           <picture>
             <source srcset="./assets/images/image-baklava-mobile.jpg" media="(min-width: 320px)" />
@@ -26,7 +26,7 @@
           </picture>
           <div class="product_btn" id="prodBtn">
             <div id="cartBtn">
-              <button id="addToCart">
+              <button class="addtocart_btn" id="addToCart">
                 <img src="./assets/images/icon-add-to-cart.svg" alt="add to cart icon" aria-hidden="true" />
                 Add To Cart
               </button>
